UserRoles view Model and controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "MailSettings": {
+        "Mail": "danijha.monaelee@gmail.com",
+        "Password": "Prettyface669!",
+        "Host": "smtp.gmail.com",
+        "Port": 587
+    }
 }
