--- a/appsettings.json
+++ b/appsettings.json
@@ -9,11 +9,17 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "AllowedHosts": "*",
+
     "MailSettings": {
         "Mail": "danijha.monaelee@gmail.com",
         "Password": "Prettyface669!",
         "Host": "smtp.gmail.com",
         "Port": 587
-    }
+    },
+    "AllowedHosts": "*",
+    "DemoAdminEmail": "demoadmin@bugtracker.com",
+    "DemoPMEmail": "demopm@bugtracker.com",
+    "DemoDevEmail": "demodev@bugtracker.com",
+    "DemoSubEmail": "demosub@bugtracker.com",
+    "DemoUserPassword": "Abc&123!"
 }
