--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
 
     "MailSettings": {
         "Mail": "danijha.monaelee@gmail.com",
-        "Password": "Prettyface669!",
+        "Password": "zlffzrswtrfswwao",
         "Host": "smtp.gmail.com",
         "Port": 587
     },
